[gd_scene load_steps=12 format=3 uid="uid://vplfw8mdtnr2"]

[ext_resource type="Script" uid="uid://bontsg7xcpolb" path="res://Weapons/AttackAreas/WeaponScripts/red_attack_area.gd" id="1_5k1vl"]
[ext_resource type="Texture2D" uid="uid://2lw51pdk4jex" path="res://Assets/Player/red_shadow.png" id="2_3cmo5"]
[ext_resource type="Texture2D" uid="uid://cui6cry577sur" path="res://Assets/Player/red.png" id="3_rrw5q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vfvni"]
radius = 421.3846

[sub_resource type="Animation" id="Animation_e2bdt"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.141592653589793]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7t5dq"]
resource_name = "purple_rotating"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.283185307179586]
}

[sub_resource type="Animation" id="Animation_3cmo5"]
resource_name = "red_rotating"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.566370614359172]
}

[sub_resource type="Animation" id="Animation_rrw5q"]
resource_name = "red_scaling"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y7bke"]
_data = {
&"RESET": SubResource("Animation_e2bdt"),
&"purple_rotating": SubResource("Animation_7t5dq"),
&"red_rotating": SubResource("Animation_3cmo5"),
&"red_scaling": SubResource("Animation_rrw5q")
}

[sub_resource type="Gradient" id="Gradient_ine7a"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_33gpc"]
gradient = SubResource("Gradient_ine7a")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.6214953, 0.3598131)

[node name="RedAttackArea" type="Area2D"]
script = ExtResource("1_5k1vl")
metadata/_custom_type_script = "uid://cx1fghutj1d1e"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_vfvni")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, 0)

[node name="Icon" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(16, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_rrw5q")

[node name="LoopAnimator" type="AnimationPlayer" parent="Icon"]
libraries = {
&"": SubResource("AnimationLibrary_y7bke")
}
autoplay = "RESET"

[node name="SingleUseAnimator" type="AnimationPlayer" parent="Icon"]
libraries = {
&"": SubResource("AnimationLibrary_y7bke")
}
autoplay = "RESET"

[node name="ShapeLight" type="PointLight2D" parent="Icon"]
position = Vector2(3.8146973e-06, 3.5762787e-07)
scale = Vector2(1.2499995, 1.2499999)
color = Color(1, 0, 0, 1)
energy = 1.3
texture = ExtResource("2_3cmo5")

[node name="RadiatingLight" type="PointLight2D" parent="Icon"]
shadow_enabled = true
texture = SubResource("GradientTexture2D_33gpc")
texture_scale = 3.77

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HitBox" type="Area2D" parent="."]

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timeout"]
